array.island.Island.scala.error
Compilation error:
Island:30: error: not found: value taille
  while (debut+taille < num.size){
               ^Island:39: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                         ^Island:39: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                                          ^